results/SVCOMP/conversational/log-instanceof3-2024_03_13_18_48_42.txt
class Main {
  //@ requires args != null;
  //@ ensures \result <==> args instanceof Object[];
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
  //@ requires args != null;
               ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
  //@ ensures \result <==> args instanceof Object[];
                           ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
  //@ requires \typeof(args) == \type(Object[]);
  //@ ensures \result <==> \typeof(args) == \type(Object[]);
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
  //@ requires \typeof(args) == \type(Object[]);
                       ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
  //@ ensures \result <==> \typeof(args) == \type(Object[]);
                                   ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
3 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof3
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ requires \typeof(args) == \type(Object[]);
  //@ ensures \result <==> \typeof(args) == \type(Object[]);
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:10: error: cannot find symbol
  //@ requires \typeof(args) == \type(Object[]);
                       ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:11: error: cannot find symbol
  //@ ensures \result <==> \typeof(args) == \type(Object[]);
                                   ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:13: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
3 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof3
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:11: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
1 error

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof3
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:11: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
1 error

class Main {
  //@ requires \typeof(args) == \type(Object[]);
  //@ ensures \result <==> \typeof(args) == \type(Object[]);
  public static boolean f() {
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
  //@ requires \typeof(args) == \type(Object[]);
                       ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
  //@ ensures \result <==> \typeof(args) == \type(Object[]);
                                   ^
  symbol:   variable args
  location: class Main
2 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/instanceof3
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ requires true;
  //@ ensures \result <==> true;
  public static boolean f() {
    return true;
  }
}

